--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,800;1,400&display=swap');
 
-body {
-    background-image: linear-gradient(to right, #051937, #003656, #00535a, #006e43, #63811e);
+.bg {
+    background-color: #0F0F0F;
+    color: #008170;
+}
+
+.main-bg {
+    background-color: #232D3F;
+}
+
+.input-bg {
+    background-color: #005B41;
 }
 
 .title {
     font-family: Playfair;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
 }
